@@ -1,3 +1,9 @@
+2003-04-06 19:56  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/NSWindow.m: Make sure -_handleWindowNeedsDisplay: is run
+	on every runloop iteration so -setNeedsDisplay* can be used safely
+	from methods invoked by -performSelector:target:argument:order:modes:.
+
 2003-04-06 15:10  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/GSLayoutManager.m (-_generateGlyphsUpToCharacter:): Make
